# 2d-location-matcher

./: .gitignore  CMakeLists.txt  README.md  TODO
include/location_matcher/: core.hpp  line_detector.hpp  line_filter.hpp  location_matcher.hpp  segment.hpp  utils.hpp
lib/line_descriptor/: CMakeLists.txt
lib/line_descriptor/src/: binary_descriptor.cpp  precomp.hpp
src/: line_detector.cpp  line_filter.cpp  location_matcher.cpp  segment.cpp  testing.cpp  utils.cpp
test/: large_wall.xcf  large_wall_rot45.xcf  line_detector_test.cpp  line_filter_test.cpp  location_matcher_test.cpp  segment_test.cpp  test_datasets.cpp  test_datasets.hpp
